[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surfacewave-backend"
version = "0.1.0"
description = "Backend for surface-wave processing and inversion."
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "numba",
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "obspy",
  "disba",
  "pandas",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
  "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/swmam", "src/swinversion"]
